<resources>
    <string name="app_name">FinanceTracker</string>
    <string name="note_optional">Note (optional)</string>
    <string name="save_transaction">Save Transaction</string>
    <string name="amount">Amount</string>
    <string name="balance_0_00">Balance: $0.00</string>
    <string name="total_income_0_00">Total Income: $0.00</string>
    <string name="total_expense_0_00">Total Expense: $0.00</string>
    <string name="add_transaction">Add Transaction</string>
    <string name="view_all_transactions">View All Transactions</string>
    <string name="type">Type:</string>
    <string name="category">Category:</string>
    <string name="amount2">Amount:</string>
    <string name="note">Note:</string>
    <string name="date">Date:</string>
    <string name="delete_transaction">Delete Transaction</string>
    <string name="type1">Type</string>
    <string name="date1">Date</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="statistics_summary">Statistics Summary</string>
    <string name="refresh_stats">Refresh Stats</string>
    <string name="welcome_to_finance_tracker">Welcome to Finance Tracker</string>
    <string name="view_statistics">View Statistics</string>
</resources>