<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/typeTV_TransactionDetailsActivity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/type"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/categoryTV_TransactionDetailsActivity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/category"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/amountTV_TransactionDetailsActivity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/amount2"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/noteTV_TransactionDetailsActivity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/note"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/dateTV_TransactionDetailsActivity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:textSize="18sp" />

        <Button
            android:id="@+id/deleteBtn_TransactionDetailsActivity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/delete_transaction"
            android:layout_marginTop="24dp"
            android:backgroundTint="@android:color/holo_red_light" />

    </LinearLayout>
</ScrollView>