<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="12dp"
    android:background="?android:attr/selectableItemBackground">

    <TextView
        android:id="@+id/typeTV_TransactionItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/type1"
        android:textStyle="bold"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/amountTV_TransactionItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/amount" />

    <TextView
        android:id="@+id/dateTV_TransactionItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date1"
        android:textSize="12sp"
        android:textColor="#888888" />

</LinearLayout>