<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/amountEdT_AddTransactionActivity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/amount"
            android:inputType="numberDecimal"
            android:layout_marginTop="12dp" />

        <Spinner
            android:id="@+id/typeSpinner_AddTransactionActivity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp" />

        <Spinner
            android:id="@+id/categorySpinner_AddTransactionActivity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp" />

        <EditText
            android:id="@+id/noteEdT_AddTransactionActivity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/note_optional"
            android:inputType="text"
            android:layout_marginTop="12dp" />

        <Button
            android:id="@+id/saveBtn_AddTransactionActivity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save_transaction"
            android:layout_marginTop="20dp" />

    </LinearLayout>
</ScrollView>